Fixing layout
Adding District of Columbia to states list caused layout problem. This
fixes it.

--- a/d3Graphics/ArticleDashboard/birthTrends.css
+++ b/d3Graphics/ArticleDashboard/birthTrends.css
@@ -59,7 +59,14 @@ body {
   /*display: none*/;
 }
 
-#dropdown-a, #dropdown-b {
+#dropdown-a {
+  display: inline-block;
+  width: 250px;
+  height: 100px;
+  margin-right: 10px;
+}
+
+#dropdown-b{
   display: inline-block;
   width: 200px;
   height: 100px;
